Redesing, add move and die functions, change text editor, etc...

--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -2,4 +2,5 @@ $color-dark: #2C3E50;
 $color-red: #2C3E50;
 $color-white: #ECF0F1;
 $color-lightblue: #3498DB;
-$color-blue: #2980B9;
+$color-green: #3AAA35;
+$color-red: #FF5252;
