--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -5,4 +5,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	padding: 0;
+	min-width: 1024px;
+	min-height: 700px;
+	font-family: Helvetica Neue, Helvetica, Arial;
 }
