--- a/src/sass/_dashboard.scss
+++ b/src/sass/_dashboard.scss
@@ -1,40 +1,33 @@
 .header {
 	height: 4rem;
 	padding: 1rem;
-	background-color: $color-blue;
+	background-color: $color-green;
 	color: $color-white;
 }
 .logo {
 	font-size: 2em;
 }
 .dashboard {
-	background-color: $color-white;
-	height: calc(100% - 5rem);
+	height: calc(100% - 4rem);
 
 
 	&__left {
+		position: relative;
 		height: 100%;
 		width: 50%;
 		float: left;
-		padding: .5rem;
 	}
 
 	&__right {
 		height: 100%;
 		width: 50%;
 		float: right;
-		padding: .5rem;
 	}
 }
 
-.sidebar,
-.code_editor,
-.game_app {
-	padding: .5rem;
-}
 
 .sidebar {
-	color: $color-white;
+	background-color: #EDEDED;
 }
 
 .sidebar,
@@ -44,15 +37,34 @@
 
 .code_editor {
 	height: 100%;
-	padding: .5rem;
 
 	&__editor {
-		height: 95%;
-		width: 95%;
+		height: 100%;
+		width: 100%;
 	}
 }
 .box {
-	background-color: $color-dark;
-	border-radius: .5rem;
 	height: 100%;
+	padding: 1rem;
+}
+
+.send_code {
+	background: $color-red;
+	border: none;
+	display: block;
+	position: absolute;
+	right: 1rem;
+	bottom: 1rem;
+	padding: .5rem 1rem;
+	text-transform: uppercase;
+	color: $color-white;
+	font-weight: bold;
+}
+
+.game_app {
+	text-align: center;
+}
+
+.game_container {
+	display: inline-block;
 }
