--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -379,9 +379,11 @@ html, body {
 .sidebar {
   background-color: #EDEDED; }
 
-.sidebar,
+.sidebar {
+  height: 40%; }
+
 .game_app {
-  height: 50%; }
+  height: 60%; }
 
 .code_editor {
   height: 100%; }
@@ -406,7 +408,8 @@ html, body {
   font-weight: bold; }
 
 .game_app {
-  text-align: center; }
+  text-align: center;
+  padding-top: 1rem; }
 
 .game_container {
   display: inline-block; }
