--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -396,12 +396,14 @@ html, body {
   padding: 1rem; }
 
 .send_code {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem; }
+
+.button {
   background: #FF5252;
   border: none;
   display: block;
-  position: absolute;
-  right: 1rem;
-  bottom: 1rem;
   padding: .5rem 1rem;
   text-transform: uppercase;
   color: #ECF0F1;
