--- a/src/sass/_dashboard.scss
+++ b/src/sass/_dashboard.scss
@@ -51,12 +51,15 @@
 }
 
 .send_code {
-	background: $color-red;
-	border: none;
-	display: block;
 	position: absolute;
 	right: 1rem;
 	bottom: 1rem;
+}
+
+.button {
+	background: $color-red;
+	border: none;
+	display: block;
 	padding: .5rem 1rem;
 	text-transform: uppercase;
 	color: $color-white;
