--- a/src/sass/_dashboard.scss
+++ b/src/sass/_dashboard.scss
@@ -28,13 +28,24 @@
 
 .sidebar {
 	background-color: #EDEDED;
+	padding: 1rem;
+	min-height: 40%;
 }
 
-.sidebar {
-	height: 40%;
+.task_text {
+	h1, h2, h3, h4, h5, h6 {
+		margin-top: 0;
+	}
+
+	td {
+		border: 2px solid #6A6A6A;
+		padding: .3rem;
+		text-align: center;
+	}
 }
+
 .game_app {
-	height: 60%;
+	min-height: 60%;
 }
 
 .code_editor {
@@ -44,10 +55,6 @@
 		height: 100%;
 		width: 100%;
 	}
-}
-.box {
-	height: 100%;
-	padding: 1rem;
 }
 
 .send_code {
